--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.17.4
   firebase_database: ^10.4.6
   cloud_firestore: ^4.15.5
+  flutter_svg: 2.0.10+1
 
 dev_dependencies:
   flutter_test:
