--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database: ^10.4.6
   cloud_firestore: ^4.15.5
   flutter_svg: 2.0.10+1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
