--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_auth: ^4.17.4
   firebase_database: ^10.4.6
   cloud_firestore: ^4.15.5
-  flutter_svg: 2.0.10+1
+  flutter_svg: ^2.0.10+1
   intl: ^0.19.0
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
@@ -69,6 +69,8 @@ flutter:
   assets:
     - assets/images/bottles.png
     - assets/images/droplet.png
+    - assets/icons/google-logo.png
+    - assets/icons/apple-logo.png
   fonts:
     - family: Raleway
       fonts:
