--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.3
   syncfusion_flutter_charts: ^26.1.40
+  dotenv: ^4.2.0
+  chat_gpt_sdk: ^3.0.9
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,7 @@ flutter:
     - assets/icons/apple-logo.png
     - assets/images/vegetarian.png
     - assets/images/keto.png
+    - assets/.env
   fonts:
     - family: Raleway
       fonts:
