--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/bottles.png
+    - assets/icons/logo.png
     - assets/images/droplet.png
     - assets/icons/google-logo.png
     - assets/icons/apple-logo.png
