--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   chat_gpt_sdk: ^3.0.9
   flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.1
+
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,13 @@ flutter_launcher_icons:
   remove_alpha_ios: true
   image_path: "assets/icons/logo.png"
   min_sdk_android: 21
+
+flutter_native_splash:
+  color: "#80b4f6" # Background color
+  image: assets/icons/logo.png # Path to your splash image
+  android: true
+  ios: true
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
